--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,21 @@
     <string name="hitung">Hitung</string>
     <string name="keliling">Keliling</string>
     <string name="btnKeliling">btnKeliling</string>
-    <string name="sisi_invalid">sisi tidak boleh kosong.</string>
+    <string name="panjang_invalid">tidak boleh kosong.</string>
+    <string name="lebar_invalid">tidak boleh kosong.</string>
     <string name="keliling_x">%1$.2f</string>
     <string name="luas_x">%1$.2f</string>
+    <string name="value_x">Keliling: %1$.2f - Volume: %1$.2f</string>
+    <string name="copyright">Hitung Persegi panjang merupakan sebuah aplikasi Android untuk menghitung luas dan keliling Persegi Panjang</string>
+    <string name="tentang_aplikasi">Tentang Aplikasi</string>
+    <string name="bagikan">Bagikan</string>
+    <string name="bagikan_template">Luas : %1$s cm\nKeliling: %2$s</string>
+    <string name="belum_ada_data">Belum ada data</string>
+    <string name="histori">Histori</string>
+    <string name="hapus_histori">Hapus Histori</string>
+    <string name="konfirmasi_hapus">Hapus semua histori?</string>
+    <string name="hapus">Hapus</string>
+    <string name="batal">Batal</string>
+    <string name="hasil_x">Keliling: %1$.2f</string>
+    <string name="data_x">Luas: %1$.2f</string>
 </resources>
